Avoid the 3px gap

--- a/tl_files/standard/layout/css/reset.css
+++ b/tl_files/standard/layout/css/reset.css
@@ -69,6 +69,10 @@
     vertical-align:middle;
   }
 
+  object {
+    display:block;
+  }
+
   textarea {
     resize:vertical;
   }
